--- a/Bsk.Solution/Bsk.Site/Web.config
+++ b/Bsk.Solution/Bsk.Site/Web.config
@@ -20,8 +20,11 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="ProdutoID" value="19ae3854-d1c5-4315-8805-405c094285c6" />
     <!-- <add key="host" value="http://localhost:57642/"/>-->
     <add key="host" value="http://brikk.areadecompras.com.br/"/>
+   <!--<add key="Api" value="http://209.133.199.252:5202/api/" />-->
+     <add key="Api" value="https://localhost:5001/api/" />
   </appSettings>
   <connectionStrings>
     <add name="MySQLConnectionString" connectionString="Server=argos-net.nethorizontes.com.br; Port=3306; Database=bsk_brikk; Uid=AreaCompra; Pwd=Brasuka@2014;Connect Timeout=30;" />
