--- a/Bsk.Solution/Bsk.BE/Bsk.BE.csproj
+++ b/Bsk.Solution/Bsk.BE/Bsk.BE.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AreaFornecedorBE.cs" />
+    <Compile Include="TransacaoBE.cs" />
     <Compile Include="CotacaoAnexosBE.cs" />
     <Compile Include="CotacaoFornecedorChatBE.cs" />
     <Compile Include="CotacaoFornecedorBE.cs" />
@@ -67,6 +68,8 @@
     <Compile Include="Model\CotacaoListaFronecedorModel.cs" />
     <Compile Include="Model\CotacaoPagamentoModel.cs" />
     <Compile Include="Model\CotacaoListaModel.cs" />
+    <Compile Include="Model\Endereco.cs" />
+    <Compile Include="Model\Usuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PropostaBE.cs" />
     <Compile Include="ServicoBE.cs" />
