--- a/Bsk.Solution/Bsk.Util/Bsk.Util.csproj
+++ b/Bsk.Solution/Bsk.Util/Bsk.Util.csproj
@@ -42,6 +42,7 @@
       <HintPath>..\packages\RestSharp.106.5.4\lib\net452\RestSharp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
@@ -56,6 +57,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BskPag.cs" />
     <Compile Include="Constantes.cs" />
     <Compile Include="Funcoes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
