--- a/Bsk.Solution/Bsk.BE/Bsk.BE.csproj
+++ b/Bsk.Solution/Bsk.BE/Bsk.BE.csproj
@@ -49,7 +49,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="RedefinirSenhaBE.cs" />
     <Compile Include="AreaFornecedorBE.cs" />
+    <Compile Include="Model\CotacaoListaClienteModel.cs" />
     <Compile Include="Model\TransacaoModel.cs" />
     <Compile Include="TransacaoBE.cs" />
     <Compile Include="CotacaoAnexosBE.cs" />
