--- a/Bsk.Solution/Bsk.Site/Bsk.Site.csproj
+++ b/Bsk.Solution/Bsk.Site/Bsk.Site.csproj
@@ -235,6 +235,7 @@
     <Content Include="Cliente\img\estrelas\4.png" />
     <Content Include="Cliente\img\estrelas\5.png" />
     <Content Include="Cliente\img\Exclamation-icon.png" />
+    <Content Include="Cliente\img\loading.gif" />
     <Content Include="Cliente\img\status\perfil.jpg" />
     <Content Include="Cliente\img\status\semImagem.jpg" />
     <Content Include="Cliente\img\status\emAndamento.jpeg" />
@@ -333,6 +334,7 @@
     <Content Include="Fornecedor\img\estrelas\3.png" />
     <Content Include="Fornecedor\img\estrelas\4.png" />
     <Content Include="Fornecedor\img\estrelas\5.png" />
+    <Content Include="Fornecedor\img\loading.gif" />
     <Content Include="Fornecedor\img\semImagem.jpg" />
     <Content Include="Fornecedor\img\status\aguardandoLiberacao.jpeg" />
     <Content Include="Fornecedor\img\status\aguardandoTransferencia.jpg" />
@@ -426,6 +428,22 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
+    <Content Include="Site\css\animate.css" />
+    <Content Include="Site\css\bootstrap.min.css" />
+    <Content Include="Site\css\datatables.min.css" />
+    <Content Include="Site\css\default.css" />
+    <Content Include="Site\css\master.css" />
+    <Content Include="Site\css\mobile.css" />
+    <Content Include="Site\js\bootstrap.min.js" />
+    <Content Include="Site\js\comum.js" />
+    <Content Include="Site\js\datatables.min.js" />
+    <Content Include="Site\js\jquery.mask.js" />
+    <Content Include="Site\js\jquery.min.js" />
+    <Content Include="Site\js\master.js" />
+    <Content Include="Site\js\rating.js" />
+    <Content Include="Site\js\sweetAlert.js" />
+    <Content Include="Site\js\wow.js" />
+    <Content Include="Site\redefinir-senha.aspx" />
     <Content Include="suporte\activate.php" />
     <Content Include="suporte\analytics.php" />
     <Content Include="suporte\api\v2\api.php" />
@@ -1209,6 +1227,13 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Site\redefinir-senha.aspx.cs">
+      <DependentUpon>redefinir-senha.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Site\redefinir-senha.aspx.designer.cs">
+      <DependentUpon>redefinir-senha.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
