Alterações ppt front

--- a/Bsk.Solution/Bsk.Site/Bsk.Site.csproj
+++ b/Bsk.Solution/Bsk.Site/Bsk.Site.csproj
@@ -435,6 +435,46 @@
     <Content Include="Site\css\default.css" />
     <Content Include="Site\css\master.css" />
     <Content Include="Site\css\mobile.css" />
+    <Content Include="Site\img\aguardandoTransferencia.jpg" />
+    <Content Include="Site\img\areasAtuacao.jpg" />
+    <Content Include="Site\img\boleto.jpg" />
+    <Content Include="Site\img\cartao.jpg" />
+    <Content Include="Site\img\estrelas\1.png" />
+    <Content Include="Site\img\estrelas\2.png" />
+    <Content Include="Site\img\estrelas\3.png" />
+    <Content Include="Site\img\estrelas\4.png" />
+    <Content Include="Site\img\estrelas\5.png" />
+    <Content Include="Site\img\favico.png" />
+    <Content Include="Site\img\finalizado.jpg" />
+    <Content Include="Site\img\fundoHome.png" />
+    <Content Include="Site\img\historico.jpg" />
+    <Content Include="Site\img\imagem.jpg" />
+    <Content Include="Site\img\liberaPagamento.jpg" />
+    <Content Include="Site\img\listaCotacao.jpg" />
+    <Content Include="Site\img\loading.gif" />
+    <Content Include="Site\img\logo.png" />
+    <Content Include="Site\img\meuSaldo.jpg" />
+    <Content Include="Site\img\negociacoes.jpg" />
+    <Content Include="Site\img\novaCotacao.jpg" />
+    <Content Include="Site\img\pagamentoPendente.jpg" />
+    <Content Include="Site\img\perfil.jpg" />
+    <Content Include="Site\img\proximaTransferencia.jpg" />
+    <Content Include="Site\img\semImagem.jpg" />
+    <Content Include="Site\img\servicoAndamento.jpg" />
+    <Content Include="Site\img\status\aguardandoLiberacao.jpeg" />
+    <Content Include="Site\img\status\aguardandoTransferencia.jpg" />
+    <Content Include="Site\img\status\buscarCotacao.jpeg" />
+    <Content Include="Site\img\status\emAndamento.jpeg" />
+    <Content Include="Site\img\status\finalizado.jpeg" />
+    <Content Include="Site\img\status\historico.jpg" />
+    <Content Include="Site\img\status\liberaPagamento.jpg" />
+    <Content Include="Site\img\status\minhasAreas.jpeg" />
+    <Content Include="Site\img\status\minhasCotacoes.jpeg" />
+    <Content Include="Site\img\status\novaCotacao.jpg" />
+    <Content Include="Site\img\status\semImagem.jpg" />
+    <Content Include="Site\img\transferido.jpg" />
+    <Content Include="Site\img\upload.png" />
+    <Content Include="Site\img\video.png" />
     <Content Include="Site\js\bootstrap.min.js" />
     <Content Include="Site\js\comum.js" />
     <Content Include="Site\js\datatables.min.js" />
