--- a/Bsk.Solution/Bsk.Site/Web.config
+++ b/Bsk.Solution/Bsk.Site/Web.config
@@ -23,8 +23,13 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="ProdutoID" value="19ae3854-d1c5-4315-8805-405c094285c6" />
     <!--<add key="host" value="http://localhost:57642/"/>-->
-     <add key="host" value="http://brikk.areadecompras.com.br/"/>
-    <add key="Api" value="http://209.133.199.252:5204/api/" />
+
+	  <!-- <add key="host" value="http://brikk.areadecompras.com.br/"/> -->
+	  <add key="host" value="http://localhost:57642/"/>
+	  
+	  
+    
+	  <add key="Api" value="http://209.133.199.252:5204/api/" />
     <!--  <add key="Api" value="https://localhost:5001/api/" />-->
   </appSettings>
   <connectionStrings>
