--- a/Bsk.Solution/Bsk.Site/Web.config
+++ b/Bsk.Solution/Bsk.Site/Web.config
@@ -28,7 +28,7 @@
     <!--  <add key="Api" value="https://localhost:5001/api/" />-->
   </appSettings>
   <connectionStrings>
-    <add name="MySQLConnectionString" connectionString="Server=argos-net.nethorizontes.com.br; Port=3306; Database=bsk_brikk; Uid=AreaCompra; Pwd=Brasuka@2014;Connect Timeout=30;" />
+	  <add name="MySQLConnectionString" connectionString="Server=189.18.149.66; Port=5301; Database=bsk_brikk; Uid=studioBrasuka; Pwd=Brasuka@2014;Connect Timeout=30;" />
   </connectionStrings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
