--- a/Bsk.Solution/Bsk.Site/Bsk.Site.csproj
+++ b/Bsk.Solution/Bsk.Site/Bsk.Site.csproj
@@ -699,6 +699,7 @@
     <Content Include="Cliente\nav.html" />
     <Content Include="Fornecedor\perfil.aspx" />
     <Content Include="Geral\busca.aspx" />
+    <Content Include="Geral\esqueciasenha.aspx" />
     <Content Include="Geral\login.aspx" />
     <Content Include="Geral\index.html" />
     <Content Include="Geral\logout.aspx" />
@@ -1460,6 +1461,7 @@
     <Compile Include="Cliente\liberar-pagamento.aspx.designer.cs">
       <DependentUpon>liberar-pagamento.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Controllers\Email.cs" />
     <Compile Include="Fornecedor\busca.aspx.cs">
       <DependentUpon>busca.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -1671,6 +1673,13 @@
     </Compile>
     <Compile Include="Geral\busca.aspx.designer.cs">
       <DependentUpon>busca.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Geral\esqueciasenha.aspx.cs">
+      <DependentUpon>esqueciasenha.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Geral\esqueciasenha.aspx.designer.cs">
+      <DependentUpon>esqueciasenha.aspx</DependentUpon>
     </Compile>
     <Compile Include="Geral\login.aspx.cs">
       <DependentUpon>login.aspx</DependentUpon>
