--- a/Bsk.Solution/Bsk.Site/Web.config
+++ b/Bsk.Solution/Bsk.Site/Web.config
@@ -14,7 +14,7 @@
     <add key="email" value="naoresponda@brikk.com.br"/>
     <add key="mascaraEmail" value="brikk@brikk.com.br"/>
     <add key="emailsenha" value="BRIKK@2021"/>
-    <add key="host" value=""/>
+    <add key="host" value="http://localhost:57642/"/>
     <add key="servidor" value="US"/>
     <add key="webpages:Version" value="3.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
@@ -23,7 +23,6 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
     <add key="ProdutoID" value="19ae3854-d1c5-4315-8805-405c094285c6"/>
     <!--<add key="host" value="http://localhost:57642/"/>-->
-    <add key="host" value="http://brikk.areadecompras.com.br/"/>
     <add key="Api" value="http://209.133.199.252:5204/api/"/>
     <!--  <add key="Api" value="https://localhost:5001/api/" />-->
   </appSettings>
