--- a/Bsk.Solution/Bsk.Site/Bsk.Site.csproj
+++ b/Bsk.Solution/Bsk.Site/Bsk.Site.csproj
@@ -711,6 +711,7 @@
     <Content Include="Geral\esqueciasenha.aspx" />
     <Content Include="Geral\login.aspx" />
     <Content Include="Geral\index.html" />
+    <Content Include="Geral\loginfornecedor.aspx" />
     <Content Include="Geral\logout.aspx" />
     <Content Include="Geral\parceiros.html" />
     <Content Include="RepositoryImg\0.png" />
@@ -1708,6 +1709,13 @@
     </Compile>
     <Compile Include="Geral\login.aspx.designer.cs">
       <DependentUpon>login.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Geral\loginfornecedor.aspx.cs">
+      <DependentUpon>loginfornecedor.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Geral\loginfornecedor.aspx.designer.cs">
+      <DependentUpon>loginfornecedor.aspx</DependentUpon>
     </Compile>
     <Compile Include="Geral\logout.aspx.cs">
       <DependentUpon>logout.aspx</DependentUpon>
