--- a/Bsk.Solution/Bsk.Site/Bsk.Site.csproj
+++ b/Bsk.Solution/Bsk.Site/Bsk.Site.csproj
@@ -709,6 +709,7 @@
     <Content Include="Fornecedor\perfil.aspx" />
     <Content Include="Geral\busca.aspx" />
     <Content Include="Geral\confirmacaoemail.aspx" />
+    <Content Include="Geral\confirmacaoemailfornecedor.aspx" />
     <Content Include="Geral\esqueciasenha.aspx" />
     <Content Include="Geral\login.aspx" />
     <Content Include="Geral\index.html" />
@@ -1703,6 +1704,13 @@
     </Compile>
     <Compile Include="Geral\confirmacaoemail.aspx.designer.cs">
       <DependentUpon>confirmacaoemail.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Geral\confirmacaoemailfornecedor.aspx.cs">
+      <DependentUpon>confirmacaoemailfornecedor.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Geral\confirmacaoemailfornecedor.aspx.designer.cs">
+      <DependentUpon>confirmacaoemailfornecedor.aspx</DependentUpon>
     </Compile>
     <Compile Include="Geral\esqueciasenha.aspx.cs">
       <DependentUpon>esqueciasenha.aspx</DependentUpon>
