--- a/Bsk.Solution/Bsk.Site/Bsk.Site.csproj
+++ b/Bsk.Solution/Bsk.Site/Bsk.Site.csproj
@@ -613,6 +613,7 @@
     <Content Include="Geral\assets\imgages\whatsapp.png" />
     <Content Include="Geral\assets\js\script.js" />
     <Content Include="Geral\cadastro.aspx" />
+    <Content Include="Geral\cadastrofeito.aspx" />
     <Content Include="Geral\clientes.html" />
     <Content Include="Cliente\aguardando-pagamento.aspx" />
     <Content Include="Anexos\Video\video.mp4" />
@@ -1697,6 +1698,13 @@
     </Compile>
     <Compile Include="Geral\busca.aspx.designer.cs">
       <DependentUpon>busca.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Geral\cadastrofeito.aspx.cs">
+      <DependentUpon>cadastrofeito.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Geral\cadastrofeito.aspx.designer.cs">
+      <DependentUpon>cadastrofeito.aspx</DependentUpon>
     </Compile>
     <Compile Include="Geral\confirmacaoemail.aspx.cs">
       <DependentUpon>confirmacaoemail.aspx</DependentUpon>
