--- a/Bsk.Solution/Bsk.Site/Bsk.Site.csproj
+++ b/Bsk.Solution/Bsk.Site/Bsk.Site.csproj
@@ -708,6 +708,7 @@
     <Content Include="Cliente\nav.html" />
     <Content Include="Fornecedor\perfil.aspx" />
     <Content Include="Geral\busca.aspx" />
+    <Content Include="Geral\activate.aspx" />
     <Content Include="Geral\esqueciasenha.aspx" />
     <Content Include="Geral\login.aspx" />
     <Content Include="Geral\index.html" />
@@ -1694,6 +1695,13 @@
     </Compile>
     <Compile Include="Geral\busca.aspx.designer.cs">
       <DependentUpon>busca.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Geral\activate.aspx.cs">
+      <DependentUpon>activate.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Geral\activate.aspx.designer.cs">
+      <DependentUpon>activate.aspx</DependentUpon>
     </Compile>
     <Compile Include="Geral\esqueciasenha.aspx.cs">
       <DependentUpon>esqueciasenha.aspx</DependentUpon>
