--- a/Bsk.Solution/Bsk.Site/Bsk.Site.csproj
+++ b/Bsk.Solution/Bsk.Site/Bsk.Site.csproj
@@ -613,6 +613,7 @@
     <Content Include="Geral\assets\imgages\whatsapp.png" />
     <Content Include="Geral\assets\js\script.js" />
     <Content Include="Geral\cadastro.aspx" />
+    <Content Include="Geral\cadastrofeito.aspx" />
     <Content Include="Geral\clientes.html" />
     <Content Include="Cliente\aguardando-pagamento.aspx" />
     <Content Include="Anexos\Video\video.mp4" />
@@ -709,9 +710,12 @@
     <Content Include="Fornecedor\perfil.aspx" />
     <Content Include="Geral\busca.aspx" />
     <Content Include="Geral\activate.aspx" />
+    <Content Include="Geral\confirmacaoemail.aspx" />
+    <Content Include="Geral\confirmacaoemailfornecedor.aspx" />
     <Content Include="Geral\esqueciasenha.aspx" />
     <Content Include="Geral\login.aspx" />
     <Content Include="Geral\index.html" />
+    <Content Include="Geral\loginfornecedor.aspx" />
     <Content Include="Geral\logout.aspx" />
     <Content Include="Geral\parceiros.html" />
     <Content Include="RepositoryImg\0.png" />
@@ -1703,6 +1707,27 @@
     <Compile Include="Geral\activate.aspx.designer.cs">
       <DependentUpon>activate.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Geral\cadastrofeito.aspx.cs">
+      <DependentUpon>cadastrofeito.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Geral\cadastrofeito.aspx.designer.cs">
+      <DependentUpon>cadastrofeito.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Geral\confirmacaoemail.aspx.cs">
+      <DependentUpon>confirmacaoemail.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Geral\confirmacaoemail.aspx.designer.cs">
+      <DependentUpon>confirmacaoemail.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Geral\confirmacaoemailfornecedor.aspx.cs">
+      <DependentUpon>confirmacaoemailfornecedor.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Geral\confirmacaoemailfornecedor.aspx.designer.cs">
+      <DependentUpon>confirmacaoemailfornecedor.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Geral\esqueciasenha.aspx.cs">
       <DependentUpon>esqueciasenha.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -1716,6 +1741,13 @@
     </Compile>
     <Compile Include="Geral\login.aspx.designer.cs">
       <DependentUpon>login.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Geral\loginfornecedor.aspx.cs">
+      <DependentUpon>loginfornecedor.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Geral\loginfornecedor.aspx.designer.cs">
+      <DependentUpon>loginfornecedor.aspx</DependentUpon>
     </Compile>
     <Compile Include="Geral\logout.aspx.cs">
       <DependentUpon>logout.aspx</DependentUpon>
