--- a/Bsk.Solution/Bsk.Site/Web.config
+++ b/Bsk.Solution/Bsk.Site/Web.config
@@ -5,6 +5,7 @@
   -->
 <configuration>
   <appSettings>
+    <add key="ApiUrl" value="https://localhost:7004/Api/"/>
     <add key="SellerID" value="736f57ce-b47c-4598-a2b6-7f5d400318c9"/>
     <add key="SellerEmail" value="harrymangiapelo@gmail.com"/>
     <add key="SellerTelefone" value="11970883817"/>
