--- a/Bsk.Solution/Bsk.Util/Bsk.Util.csproj
+++ b/Bsk.Solution/Bsk.Util/Bsk.Util.csproj
@@ -112,6 +112,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="API.cs" />
+    <Compile Include="APIObjects\Cadastro.cs" />
     <Compile Include="BskPag.cs" />
     <Compile Include="Constantes.cs" />
     <Compile Include="Funcoes.cs" />
