--- a/Bsk.Solution/Bsk.Site/Web.config
+++ b/Bsk.Solution/Bsk.Site/Web.config
@@ -29,6 +29,9 @@
   <connectionStrings>
     <add name="MySQLConnectionString" connectionString="Server=argos-net.nethorizontes.com.br; Port=3306; Database=bsk_brikk; Uid=AreaCompra; Pwd=Brasuka@2014;Connect Timeout=30;"/>
   </connectionStrings>
+	<!--<connectionStrings>
+    <add name="MySQLConnectionString" connectionString="Server=dbhomolog.brikk.com.br; Port=3306; Database=bsk_brikk; Uid=admin; Pwd=cM%X(mFgCMZKcIeKQyoVNdoh.E)IU3lm;Connect Timeout=30;"/>
+  </connectionStrings>-->
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
 
