--- a/Bsk.Solution/Bsk.Site/Web.config
+++ b/Bsk.Solution/Bsk.Site/Web.config
@@ -5,7 +5,9 @@
   -->
 <configuration>
   <appSettings>
+	<add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
     <add key="SellerID" value="736f57ce-b47c-4598-a2b6-7f5d400318c9"/>
+	<add key="EmailAppPassword" value="ycbsvkpsmichdxta"/>
     <add key="SellerEmail" value="harrymangiapelo@gmail.com"/>
     <add key="SellerTelefone" value="11970883817"/>
     <add key="senha" value=""/>
