Refine card management UI and wallet integration

--- a/Bsk.Solution/Bsk.Site/Web.config
+++ b/Bsk.Solution/Bsk.Site/Web.config
@@ -27,6 +27,7 @@
     <!--<add key="host" value="http://localhost:57642/"/>-->
     <add key="Api" value="http://209.133.199.252:5204/api/"/>
     <!--  <add key="Api" value="https://localhost:5001/api/" />-->
+    <add key="PagarmeApiKey" value=""/>
   </appSettings>
   <!--<connectionStrings>
     <add name="MySQLConnectionString" connectionString="Server=argos-net.nethorizontes.com.br; Port=3306; Database=bsk_brikk; Uid=AreaCompra; Pwd=Brasuka@2014;Connect Timeout=30;"/>
