--- a/Bsk.Solution/Bsk.Site/Web.config
+++ b/Bsk.Solution/Bsk.Site/Web.config
@@ -51,7 +51,15 @@
     <customErrors mode="Off"/>
     <!--<globalization culture="en-US" uiCulture="en-US" />-->
     <globalization culture="pt-BR" uiCulture="pt-BR"/>
-    <compilation targetFramework="4.8" debug="true"/>
+    <compilation targetFramework="4.8" debug="true">
+      <assemblies>
+        <add assembly="System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
+        <add assembly="System.Web.WebPages, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
+        <add assembly="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
+        <add assembly="System.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"/>
+        <add assembly="System.Xml.Linq, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"/>
+      </assemblies>
+    </compilation>
     <httpRuntime targetFramework="4.5.2" requestValidationMode="2.0" maxRequestLength="1048576"/>
     <pages enableEventValidation="false">
       <namespaces>
